package com.learn.management.profile;

public class DefaultProfileManagement implements ProfileManagement {
}
