package com.learn.management.profile;

public interface ProfileManagement {
}
