package com.learn.service.media;

public class DefaultMediaService implements MediaService {
}
