package com.learn.service.media;

public interface MediaService {
}
