package com.learn.service.media;

public interface MediaTransformer {
}
