package com.learn.service.user;

public interface UserTransformer {
}
